--- a/text.html
+++ b/text.html
@@ -1,5 +1,11 @@
 <htlm>
 <head>
-<h1>this my first html</h1>
+<h1>this my first header</h1>
 </head>
+  <body>
+    this is my body content...
+  </body>
+  <p>
+    in this my pargraph content
+  </p>
 </html>
